# nanoclaw

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ja.md  README_zh.md  manual.md  package-lock.json  package.json  test_codex_map.py  test_e2e_wiki.py  tsconfig.json  vitest.config.ts
.codex/: AGENTS.md  config.toml
.codex/agents/: doc_explorer.toml
.github/workflows/: update-tokens.yml
.omc/: project-memory.json
.omc/state/: hud-state.json  (+6 more)
container/: Dockerfile  core.Dockerfile
docs/: architecture-reference.md  modularization-handoff.md  schedule-sync-m365.md  target-architecture-plan.md  troubleshooting-log.md
original_source/: README.md
runtime/: codex_bridge.mjs
scripts/: docker-down.sh  docker-logs.sh  docker-status.sh  docker-up.sh  run_country_layer1.py
setup/: environment.test.ts  index.ts  register.ts  verify.ts
src/: agent-backend.test.ts  agent-backend.ts  agent-failure.test.ts  agent-failure.ts  agent-output.test.ts  agent-output.ts  config.ts  container-runner.test.ts  container-runner.ts  db.test.ts  db.ts  formatting.test.ts  group-folder.test.ts  group-folder.ts  index.ts  ipc-auth.test.ts  ipc.ts  runtime-mode.test.ts  runtime-mode.ts  task-scheduler.ts  types.ts  workflow-engine.test.ts  workflow-engine.ts
src/catalog/methods/karpathy-loop/: __init__.py  agents.py  engine.py  index.ts  loop_types.py  pyproject.toml  registry.test.ts  registry.ts  run_country_wiki.py  test_random_task.py  test_rubric.md  types.py  types.ts  wiki_task.py
src/catalog/methods/karpathy-loop/.omc/state/: idle-notif-cooldown.json
(+210 files in other folders)
